--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ervin Wong by ervin-wong</title>
+    <title>Ervin's Homepage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,6 +20,7 @@
 
 
         <p class="view"><a href="https://github.com/ervin-wong">View My GitHub Profile</a></p>
+        <p class="view"><a href="http://ervin.wang/tetris.html">Play a game</a></p>
 
       </header>
       <section>
