--- a/tetris.html
+++ b/tetris.html
@@ -1,5 +1,5 @@
 <html>
-<style>.c {margin :1px;width:19px;height:19px;background:red;position:absolute;}
+<style>body {margin:auto} .c {margin :1px;width:19px;height:19px;background:red;position:absolute;}
 .d {margin :1px;width:19px;height:19px;background:gray;position:absolute;}
 .f {top:0px;left:0px;background:black;position:absolute;}
 </style>
