--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h1>Ervin</h1>
         <h2>Say hello to erveybody.</h2>
         <a href="https://github.com/ervin-wong" class="button"><small>Follow me on</small> GitHub</a>
+        <a href="http://ervin.wang/tetris.html" class="button"><small>Play Tetris!</small> GitHub</a>
       </div>
     </header>
 
