--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 Welcome to GitHub Pages.</h3>
-  <a href="http://ervin.wang/tetris.html" class="button"><small>Play Tetris!</small> GitHub</a>
+  <a href="http://ervin.wang/tetris.html">Play Tetris!</a>
 
   
   </body>
