--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-Welcome to GitHub Pages.</h3>
-  <iframe src="http://ervin.wang/tetris.html"></iframe>
-
-  
+            <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+              <span class="octicon octicon-link"></span>
+            </a>Welcome to GitHub Pages.</h3>
+        </section>
+      </div>
+    <iframe src="http://ervin.wang/tetris.html"></iframe>
+  </div>
   </body>
 </html>
