--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </a>Welcome to GitHub Pages.</h3>
         </section>
       </div>
-    <iframe src="http://ervin.wang/tetris.html"></iframe>
+    <iframe width="200px" height="400px" src="http://ervin.wang/tetris.html"></iframe>
   </div>
   </body>
 </html>
