--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-         <iframe width="220px" height="420px" src="http://ervin.wang/tetris.html"></iframe>
+         <iframe width="220px" height="420px" border="none" src="http://ervin.wang/tetris.html"></iframe>
       </div>
   </div>
   </body>
