change index page

--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <title>Ervin by ervin-wong</title>
-  </head>
-
-  <body>
-    <header>
-      <div class="inner">
-        <h1>Ervin</h1>
-        <h2>Say hello to erveybody.</h2>
-        <a href="https://github.com/ervin-wong" class="button"><small>Follow me on</small> GitHub</a>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-         <iframe width="220px" height="420px" style="border:none" src="http://ervin.wang/tetris.html"></iframe>
-      </div>
-  </div>
-  </body>
+<head>
+<title>Welcome</title>
+<link rel="stylesheet" type="text/css" href="stylesheets/welcome.css" />
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="nav">
+                <ul>
+                    <li><a href="#" target="_self">Home</a></li>
+                    <li><a href="http://weibo.com/ervinwang" target="_blank">WeiBo</a></li>
+                    <li><a href="https://github.com/ervin-wong" target="_blank">GitHub</a></li>
+                    <li><a href="color.html" target="_blank">Color</a></li>
+                    <li><a href="hpicon/icon.html" target="_blank">HP Icon</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="main" id="main">
+            <div class="main-wrapper">
+                <div class="main-catalog">
+                    <div id="profile">
+                        <div id="pic">
+                            <img src="images/jobs.png" />
+                        </div>
+                        <div id="intro">
+                            <h3>Steve Jobs</h3>
+                        </div>
+                    </div>
+                    <div class="catalog-list blog-list">
+                        <div class="catalog-list-title">
+                            <span>Some Books</span>
+                        </div>
+                        <ul>
+                            <li>One</li>
+                            <li>Two</li>
+                            <li>Three</li>
+                             <li>Four</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="main-content"><span id="under_construction">under construction<span></div>
+            </div>
+        </div>
+        <div class="footer">
+            <div id="copyright">
+                <span>Copyright 2015 Ervin-Wong(516960605@qq.com)</span>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
+<script></script>
