delete my email adress

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="footer">
             <div id="copyright">
-                <span>Copyright 2015 Ervin-Wong(516960605@qq.com)</span>
+                <span>Copyright 2015 Ervin-Wong</span>
             </div>
         </div>
     </div>
