adjust the layout again

--- a/index.html
+++ b/index.html
@@ -29,37 +29,29 @@
 			</div>
 			<div class="main" id="main">
 				<div class="main-wrapper">
-					<div class="main-catalog">
-						<div id="profile">
-							<div id="pic">
-								<img src="images/jobs.png" />
-							</div>
-							<div id="intro">
-								<h3>Steve Jobs</h3>
-							</div>
-						</div>
-						<div class="catalog-list blog-list">
-							<div class="catalog-list-title">
-								<span>Some Books</span>
-							</div>
-							<ul>
-								<li>
-									One
-								</li>
-								<li>
-									Two
-								</li>
-								<li>
-									Three
-								</li>
-								<li>
-									Four
-								</li>
-							</ul>
-						</div>
-					</div>
 					<div class="main-content">
 						<span id="under_construction">under construction</span>
+					</div>
+					<div class="main-catalog">
+					<div class="catalog-list blog-list">
+						<div class="catalog-list-title">
+							<span>Catalog</span>
+						</div>
+						<ul>
+							<li>
+								One
+							</li>
+							<li>
+								Two
+							</li>
+							<li>
+								Three
+							</li>
+							<li>
+								Four
+							</li>
+						</ul>
+					</div>
 					</div>
 				</div>
 			</div>
