adjust the folder structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Welcome</title>
-		<link rel="stylesheet" type="text/css" href="stylesheets/welcome.css" />
+		<link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -19,7 +19,7 @@
 							<a href="https://github.com/ervin-wong" target="_blank">GitHub</a>
 						</li>
 						<li>
-							<a href="color.html" target="_blank">Color</a>
+							<a href="html/color.html" target="_blank">Color</a>
 						</li>
 						<li>
 							<a href="hpicon/icon.html" target="_blank">HP Icon</a>
