--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Welcome</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/index.css" />
+		<link rel="stylesheet" type="text/css" href="font-awesome-4.4.0/css/font-awesome.css" />
+		<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"> -->
 	</head>
 	<body>
 		<div class="container">
@@ -10,19 +13,19 @@
 				<div class="nav">
 					<ul>
 						<li>
-							<a href="#" target="_self">Home</a>
+							<a href="#" target="_self"><i class="fa fa-home fa-fw fa-lg"></i>主页</a>
 						</li>
 						<li>
-							<a href="http://weibo.com/ervinwang" target="_blank">WeiBo</a>
+							<a href="http://weibo.com/ervinwang" target="_blank"><i class="fa fa-weibo fa-fw fa-lg"></i>微博</a>
 						</li>
 						<li>
-							<a href="https://github.com/ervin-wong" target="_blank">GitHub</a>
+							<a href="https://github.com/ervin-wong" target="_blank"><i class="fa fa-github fa-fw fa-lg"></i>Git Hub</a>
 						</li>
 						<li>
-							<a href="html/color.html" target="_blank">Color</a>
+							<a href="html/color.html" target="_blank"><i class="fa fa-pagelines fa-fw fa-lg"></i>Color Picker</a>
 						</li>
 						<li>
-							<a href="hpicon/icon.html" target="_blank">HP Icon</a>
+							<a href="hpicon/icon.html" target="_blank"><i class="fa fa-cart-plus fa-fw fa-lg"></i>HP icon</a>
 						</li>
 					</ul>
 				</div>
